[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/waterfall_spr_0.png" type="Texture" id=1]
[ext_resource path="res://sprites/waterfall2_spr_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/waterfall2_spr_0.png" type="Texture" id=3]
[ext_resource path="res://sprites/waterfall_spr_1.png" type="Texture" id=4]
[ext_resource path="res://scenes/WaterFall.gd" type="Script" id=5]
[ext_resource path="res://scenes/BigBlock.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/waterfall_short_spr_1.png" type="Texture" id=7]
[ext_resource path="res://sprites/waterfall_short_spr_0.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "short",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 16, 234.75 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 16, 49.5 )

[node name="WaterFall" type="Node2D"]
position = Vector2( 222, 14 )
script = ExtResource( 5 )

[node name="spr0" type="AnimatedSprite" parent="."]
position = Vector2( -2, 8 )
frames = SubResource( 12 )
playing = true

[node name="spr1" type="AnimatedSprite" parent="."]
position = Vector2( -2, 298 )
frames = SubResource( 11 )
playing = true

[node name="spr2" type="AnimatedSprite" parent="."]
position = Vector2( -2, 572 )
scale = Vector2( 1, -1 )
frames = SubResource( 12 )
playing = true

[node name="area" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="area"]
position = Vector2( -2, 240.25 )
shape = SubResource( 13 )

[node name="collider2" type="CollisionShape2D" parent="area"]
position = Vector2( -2, 524.5 )
shape = SubResource( 14 )

[node name="BigBlock" parent="." instance=ExtResource( 6 )]
position = Vector2( -59, 438 )
ignore_waterfall = true

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="area" to="." method="_on_area_area_exited"]
[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
